syntax = "proto3";

package payment;

service PaymentService {
  rpc CreateCustomer (CreateCustomerMessage) returns (CreateCustomerResponse) {}
  rpc CreateCharge (CreateChargeMessage) returns (CreateChargeResponse) {}
}

message CreateCustomerMessage {
  string id = 1;
  string email = 2;
}

message CreateCustomerResponse {
  string customerId = 1;
}

message CreateChargeMessage {}
message CreateChargeResponse {}